--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ body {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #6bf0ff;
+  background-color: #ffc0cb;
   filter: blur(10vmin);
 }
 .flower__leaf {
@@ -185,7 +185,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #39c6d6, #a7ffee);
+  background-image: linear-gradient(to top, #ff69b4, #ffc0cb);
   z-index: 1;
   opacity: 0.8;
 }
@@ -212,7 +212,7 @@ body {
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #14757a, #39c6d6);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #ff69b4, #ffc0cb);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   -webkit-animation: grow-flower-tree 4s backwards;
           animation: grow-flower-tree 4s backwards;
@@ -227,7 +227,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #39c6d6);
+  background-image: linear-gradient(to top, rgba(255, 105, 180, 0.4), #ffc0cb);
 }
 .flower__line__leaf--1 {
   transform: rotate(70deg) rotateY(30deg);
@@ -314,7 +314,7 @@ body {
           animation-delay: 3.5s;
 }
 .flower__grass {
-  --c: #159faa;
+  --c: #ff69b4;
   --line-w: 1.5vmin;
   position: absolute;
   bottom: 12vmin;
@@ -360,7 +360,7 @@ body {
   height: var(--size);
   border-top-left-radius: var(--size);
   border-top-right-radius: var(--size);
-  background-image: linear-gradient(to top, transparent, transparent 30%, var(--c));
+ background-image: linear-gradient(to top, transparent, transparent 30%, #ff69b4);
   z-index: 100;
 }
 .flower__grass__leaf--1 {
@@ -529,14 +529,14 @@ body {
   right: 0%;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+ background-color: rgba(255, 255, 255, 0.064);
   filter: blur(1.5vmin);
   z-index: 100;
 }
 .flower__g-long {
   --w: 2vmin;
   --h: 6vmin;
-  --c: #159faa;
+  --c: #ff69b4;
   position: absolute;
   bottom: 10vmin;
   left: -3vmin;
@@ -592,7 +592,7 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #079097;
+  border-left: 2vmin solid #ff69b4;;
   background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
   -webkit-mask-image: linear-gradient(to top, transparent 30%, #079097 60%);
 }
@@ -672,7 +672,7 @@ body {
 .flower__g-front__line {
   width: 0.3vmin;
   height: 20vmin;
-  background-image: linear-gradient(to top, transparent, #079097, transparent 100%);
+  background-image: linear-gradient(to top, transparent,#ff69b4, transparent 100%);
   position: relative;
 }
 .flower__g-front__leaf-wrapper {
@@ -780,8 +780,8 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #ff69b4 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #ff69b4 40%, transparent 50%, transparent);
   mask-image: linear-gradient(to bottom right, #159faa 50%, transparent 50%, transparent);
 }
 .flower__g-fr {
@@ -813,8 +813,8 @@ body {
   width: 30vmin;
   height: 50vmin;
   border-top-left-radius: 100%;
-  border-left: 2vmin solid #079097;
-  -webkit-mask-image: linear-gradient(to top, transparent 25%, #079097 50%);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #ff69b4 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #ff69b4 40%, transparent 50%, transparent);
   position: relative;
   z-index: 1;
 }
@@ -826,8 +826,8 @@ body {
   height: 10vmin;
   border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
   box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #23f0ff 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(135deg, #159faa 40%, transparent 50%, transparent);
+  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #ff69b4 45%, transparent 50%, transparent);
+  -webkit-mask-image: linear-gradient(135deg, #ff69b4 40%, transparent 50%, transparent);
 }
 .flower__g-fr__leaf--1 {
   left: 20vmin;
@@ -947,7 +947,7 @@ body {
 
 .long-g {
   position: absolute;
-  bottom: 25vmin;
+  bottom: 15vmin;
   left: -42vmin;
   transform-origin: bottom left;
 }
@@ -965,7 +965,7 @@ body {
   transform: rotate(3deg) rotateY(-180deg);
 }
 .long-g--2, .long-g--3 {
-  bottom: -3vmin;
+  bottom: -1vmin;
   left: -35vmin;
   transform-origin: center;
   transform: scale(0.6) rotateX(60deg);
@@ -986,7 +986,7 @@ body {
 }
 .long-g--4 {
   left: 25vmin;
-  bottom: -3vmin;
+  bottom: -1vmin;
   transform-origin: center;
   transform: scale(0.6) rotateX(60deg);
 }
@@ -1000,22 +1000,22 @@ body {
 }
 .long-g--6 {
   left: 0vmin;
-  bottom: -20vmin;
+  bottom: -10vmin;
   z-index: 100;
   filter: blur(0.3vmin);
   transform: scale(0.8) rotate(2deg);
 }
 .long-g--7 {
   left: 35vmin;
-  bottom: 20vmin;
+  bottom: 10vmin;
   z-index: -1;
   filter: blur(0.3vmin);
   transform: scale(0.6) rotate(2deg);
   opacity: 0.7;
 }
 .long-g .leaf {
-  --w: 15vmin;
-  --h: 40vmin;
+ --w: 10vmin; 
+  --h: 25vmin;
   --c: #1aaa15;
   position: absolute;
   bottom: 0;
@@ -1032,14 +1032,14 @@ body {
           animation: leaf-ans-1 4s linear infinite;
 }
 .long-g .leaf--1 {
-  --w: 5vmin;
-  --h: 60vmin;
+  --w: 4vmin;
+  --h: 40vmin;
   -webkit-animation: leaf-ans-1 4s linear infinite;
           animation: leaf-ans-1 4s linear infinite;
 }
 .long-g .leaf--2 {
-  --w: 10vmin;
-  --h: 40vmin;
+  --w: 8vmin;
+  --h: 30vmin;
   left: -0.5vmin;
   bottom: 5vmin;
   transform-origin: bottom left;
@@ -1048,8 +1048,8 @@ body {
           animation: leaf-ans-2 3s linear infinite;
 }
 .long-g .leaf--3 {
-  --w: 5vmin;
-  --h: 30vmin;
+  --w: 4vmin;
+  --h: 20vmin;
   left: -1vmin;
   bottom: 3.2vmin;
   transform-origin: bottom left;
